<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Picasso Demo</string>
    <string name="load_finished">Bitmap loaded</string>
    <string name="load_failed">Bitmap load failed</string>
    <string name="load_started">Bitmap load started…</string>
    <string name="list_demo">List Demo</string>
    <string name="grid_demo">Grid demo</string>
    <string name="load_next">Load Next</string>
    <string name="convert_grayscale">Convert to grayscale</string>
    <string name="random_invalid">Chance of invalid URL</string>
    <string name="center_crop">Center crop</string>
    <string name="center_inside">Center inside</string>
    <string name="fit">Fit</string>
    <string name="resize">Resize</string>
    <string name="fit_mode">Fit mode</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="download_started">Downloading…</string>
    <string name="download_finished">Download finished</string>
    <string name="download_failed">Download failed</string>

</resources>
